Fixing Bugs 1.)Increasing line spacing in text instructions. 2.)Fixed text instruction not appearing in Firefox 3.)Fixing the mandatory config value

--- a/gadget/css/formsGadget.css
+++ b/gadget/css/formsGadget.css
@@ -113,7 +113,7 @@ div.grantsHide{
 }
 
 .formsGadget .text{
-	line-height: 10px;
+	line-height: 15px;
 	margin: 6px 0px;
 }
 
